Improved lock function
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1225 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/EmptyScreenView.mxml
+++ b/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/EmptyScreenView.mxml
@@ -56,7 +56,7 @@
             public function onShow():void {
                 if (!identity.loggedIn) {
                 	if (modelLocator.SCREEN_LOCKED) {
-                        showLoginDialog("Screen locked");
+                        showLoginDialog("Application locked by "+modelLocator.viewLockedBy);
                 	} else {
                         showLoginDialog("Not logged in");
                     }
