--- a/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/HeaderComponent.mxml
+++ b/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/HeaderComponent.mxml
@@ -57,6 +57,7 @@
     		
             private function lock(event:MouseEvent = null):void {
             	modelLocator.viewBeforeLock = modelLocator.actualView;
+                modelLocator.viewLockedBy = identity.username;
                 identity.logout();
                 dispatchEvent(new ApplicationEvent(ApplicationEvent.LOCK));
             }
