--- a/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/LoginView.mxml
+++ b/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/LoginView.mxml
@@ -77,6 +77,8 @@
         
             private function loginError(event:TideFaultEvent):void {
                 loginMessageText = event.fault.faultString;
+                myPass.text = "";
+                myPass.setFocus();
             }
 
         ]]>
