Fixed GDS bug, removes Settings from menu
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1247 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
@@ -49,7 +49,7 @@
             <menuitem label="Users" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
             <menuitem label="Roles" action="{SwitchScreenEvent.SHOW_ROLE_MGMT_VIEW}" />
             <menuitem label="Modules" action="{SwitchScreenEvent.SHOW_MODULE_MGMT_VIEW}" />
-            <menuitem label="Settings" action="{SwitchScreenEvent.SHOW_SETTING_MGMT_VIEW}" />
+            <!-- menuitem label="Settings" action="{SwitchScreenEvent.SHOW_SETTING_MGMT_VIEW}" /-->
         </menuitem>
     </mx:XMLList>
 
